--- a/SVG2PNG.dproj
+++ b/SVG2PNG.dproj
@@ -107,15 +107,17 @@
         <VerInfo_Keys>CompanyName=ozok;FileDescription=SVG2PNG;FileVersion=1.0.0.73;InternalName=SVG2PNG;LegalCopyright=2014 (c) ozok;LegalTrademarks=SVG2PNG;OriginalFilename=SVG2PNG.exe;ProductName=SVG2PNG;ProductVersion=1.0.0.0;Comments=SVG2PNG</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win64)'!=''">
+        <DCC_Define>madExcept;$(DCC_Define)</DCC_Define>
+        <VerInfo_MinorVer>1</VerInfo_MinorVer>
+        <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
         <Icon_MainIcon>SVG2PNG_Icon1.ico</Icon_MainIcon>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_DebugInformation>true</DCC_DebugInformation>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Build>73</VerInfo_Build>
-        <DCC_Define>madExcept;$(DCC_Define)</DCC_Define>
+        <VerInfo_Build>78</VerInfo_Build>
         <DCC_MapFile>3</DCC_MapFile>
         <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
-        <VerInfo_Keys>CompanyName=ozok;FileDescription=SVG2PNG;FileVersion=1.0.0.73;InternalName=SVG2PNG;LegalCopyright=2014 (C) ozok;LegalTrademarks=SVG2PNG;OriginalFilename=SVG2PNG.exe;ProductName=SVG2PNG;ProductVersion=1.0.0.0;Comments=SVG2PNG</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=ozok;FileDescription=SVG2PNG;FileVersion=1.1.0.78;InternalName=SVG2PNG;LegalCopyright=2014 (C) ozok;LegalTrademarks=SVG2PNG;OriginalFilename=SVG2PNG.exe;ProductName=SVG2PNG;ProductVersion=1.0.0.0;Comments=SVG2PNG</VerInfo_Keys>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
