--- a/SVG2PNG.dproj
+++ b/SVG2PNG.dproj
@@ -96,28 +96,28 @@
         <DCC_DebugInformation>false</DCC_DebugInformation>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
+        <VerInfo_MinorVer>1</VerInfo_MinorVer>
         <Icon_MainIcon>SVG2PNG_Icon.ico</Icon_MainIcon>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_DebugInformation>true</DCC_DebugInformation>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Build>73</VerInfo_Build>
+        <VerInfo_Build>81</VerInfo_Build>
         <DCC_Define>madExcept;$(DCC_Define)</DCC_Define>
         <DCC_MapFile>3</DCC_MapFile>
         <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
-        <VerInfo_Keys>CompanyName=ozok;FileDescription=SVG2PNG;FileVersion=1.0.0.73;InternalName=SVG2PNG;LegalCopyright=2014 (c) ozok;LegalTrademarks=SVG2PNG;OriginalFilename=SVG2PNG.exe;ProductName=SVG2PNG;ProductVersion=1.0.0.0;Comments=SVG2PNG</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=ozok;FileDescription=SVG2PNG;FileVersion=1.1.0.81;InternalName=SVG2PNG;LegalCopyright=2014 (c) ozok;LegalTrademarks=SVG2PNG;OriginalFilename=SVG2PNG.exe;ProductName=SVG2PNG;ProductVersion=1.0.0.0;Comments=SVG2PNG</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win64)'!=''">
         <DCC_Define>madExcept;$(DCC_Define)</DCC_Define>
         <VerInfo_MinorVer>1</VerInfo_MinorVer>
-        <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
         <Icon_MainIcon>SVG2PNG_Icon1.ico</Icon_MainIcon>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_DebugInformation>true</DCC_DebugInformation>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Build>78</VerInfo_Build>
+        <VerInfo_Build>81</VerInfo_Build>
         <DCC_MapFile>3</DCC_MapFile>
         <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
-        <VerInfo_Keys>CompanyName=ozok;FileDescription=SVG2PNG;FileVersion=1.1.0.78;InternalName=SVG2PNG;LegalCopyright=2014 (C) ozok;LegalTrademarks=SVG2PNG;OriginalFilename=SVG2PNG.exe;ProductName=SVG2PNG;ProductVersion=1.0.0.0;Comments=SVG2PNG</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=ozok;FileDescription=SVG2PNG;FileVersion=1.1.0.81;InternalName=SVG2PNG;LegalCopyright=2014 (C) ozok;LegalTrademarks=SVG2PNG;OriginalFilename=SVG2PNG.exe;ProductName=SVG2PNG;ProductVersion=1.0.0.0;Comments=SVG2PNG</VerInfo_Keys>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -125,12 +125,10 @@
         </DelphiCompile>
         <DCCReference Include="UnitMain.pas">
             <Form>MainForm</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="UnitEncoder.pas"/>
         <DCCReference Include="UnitAbout.pas">
             <Form>AboutForm</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
@@ -194,6 +192,7 @@
                     <VersionInfoKeys Name="CFBundleDevelopmentRegion"/>
                 </VersionInfoKeys>
                 <Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\11.0\Bpl\ImageMagick.bpl">(untitled)</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k180.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp180.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\11.0\Bpl\Package1.bpl">(untitled)</Excluded_Packages>
